arreglamos errores, y avanzamos con misiones y empezamos a ver donaciones